# chip8stuff

./: .gitignore  Cargo.toml  Readme.adoc  flake.nix
src/: chip8.rs  debug_gui.rs  main.rs
src/chip8/: instructions.rs  mod.rs
